feature : Correct handles responses : Add sum handle : Add SumSubscriptions func
